Vuelta a un estilos.css general

--- a/index.html
+++ b/index.html
@@ -12,15 +12,67 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
-    <style>
-        header {
-            font-family: "Permanent Marker", sans-serif;
-        }
-        h4 {
-            font-family: "Permanent Marker", sans-serif;
-        }
-    </style>
 </head>
+<header>
+    Producer E87
+</header>
+<div> 
+    <nav class="nav__btn" id="nav__btn">
+      
+            <a href="index.html"> Home</a>
+            <a href="bio.html"> Bio</a>
+            <a href="obras.html"> Music</a>
+            <a href="contacto.html"> Contacto</a>
+      
+    </nav>
+</div>
+
+<body>
+    <main>
+        <div id="disco_1">
+            <img src="img/Musicasion_Tapa.jpg" width="400" height="400" id="newAlbum" name="newAlbum">
+        </div>
+        <div>
+            <p>
+            <h2>El currito </h2>
+            <br>
+            <h3>Producer E87 te explica porque deberias comprar este disco que te quiere vender.
+            </h3>
+            </p>
+        </div>
+        <footer>
+            <fieldset>
+            <h4>yo soy el footer con todos los iconos de redes sociales</h4>
+                <img src="img/instagram.png" alt"" width="40" height="40">
+                <!--
+    WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
+    DESCARGAR LA IMAGEN PNG
+    ----COMO METER ICONO DE RED SOCIAL
+    -->
+            </fieldset>
+        </footer>
+    </main>
+
+
+
+</body>
+
+</html>
+
+<!--
+:root {font-size: 22px; /* Tamaño base */}
+h1 {font-size: 2rem; /* El doble del tamaño base: 44px */}
+h2 {font-size: 1rem; /* El mismo tamaño base: 22px */}
+
+Las unidades flexibles (vw y vh o vmin y vmax) son relativas al tamaño del
+ancho o alto del viewport (ventana gráfica, región visible de la página Web en el
+navegador, no el body).
+● vw: viewport width. Por ejemplo, si decimos que un div debe medir 50vw, es
+equivalente al 50% del ancho total del viewport.
+● vh: viewport height. Por ejemplo, si definimos qué un div mide 50vh y el alto
+del viewport es 800px, nuestro div medirá 400px.
+-->
+
 <!-- BANNER CON MENU
 <header id="header" role="banner" class="mb-3 mb-lg-5">
     <div class="container">
@@ -46,61 +98,4 @@
         </div>
     </div>
 </header>
--->
-<header>
-    Producer E87
-</header>
-<div> <!-- Mandame un Emilio-->
-    <nav class="nav__btn" id="nav__btn">
-        <h4>
-            <a href="../index.html"> Home</a>
-            <a href="../bio.html"> Bio</a>
-            <a href="../bio.html"> Obras</a>
-            <a href="../contacto.html"> Contacto</a>
-        </h4>
-    </nav>
-</div>
-
-<body>
-    <main>
-        <div id="disco_1">
-            <img src="img/Musicasion_Tapa.jpg" width="400" height="400" id="newAlbum" name="newAlbum">
-        </div>
-        <div>
-            <p>
-            <h2>El currito </h2>
-            <br>
-            <h3>Producer E87 te explica porque deberias comprar este disco que te quiere vender.
-            </h3>
-            </p>
-        </div>
-    </main>
-    <footer>
-        <fieldset>
-            <img src="img/instagram.png" alt"" width="40" height="40">
-            <!--
-WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
-DESCARGAR LA IMAGEN PNG
-----COMO METER ICONO DE RED SOCIAL
--->
-        </fieldset>
-    </footer>
-
-
-</body>
-
-</html>
-
-<!--
-:root {font-size: 22px; /* Tamaño base */}
-h1 {font-size: 2rem; /* El doble del tamaño base: 44px */}
-h2 {font-size: 1rem; /* El mismo tamaño base: 22px */}
-
-Las unidades flexibles (vw y vh o vmin y vmax) son relativas al tamaño del
-ancho o alto del viewport (ventana gráfica, región visible de la página Web en el
-navegador, no el body).
-● vw: viewport width. Por ejemplo, si decimos que un div debe medir 50vw, es
-equivalente al 50% del ancho total del viewport.
-● vh: viewport height. Por ejemplo, si definimos qué un div mide 50vh y el alto
-del viewport es 800px, nuestro div medirá 400px.
 -->
