--- a/obras.html
+++ b/obras.html
@@ -7,88 +7,111 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="icon" href="img/html.ico" type  -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="STYLESHEET" href="css/obras.css">
+    <link rel="STYLESHEET" href="css/estilos.css">
     <title>Obras</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
-    <style>
-        header {
-            font-family: "Permanent Marker", sans-serif;
-        }
-        h4 {
-            font-family: "Permanent Marker", sans-serif;
-        }
-    </style>
 </head>
 <header>
     Producer E87
 </header>
 <div>
     <nav class="nav__btn" id="nav__btn">
-        <h4>
-            <a href="../index.html"> Home</a>
-            <a href="../bio.html"> Bio</a>
-            <a href="../bio.html"> Obras</a>
-            <a href="../contacto.html"> Contacto</a>
-        </h4>
+        <a href="index.html"> Home</a>
+        <a href="bio.html"> Bio</a>
+        <a href="obras.html"> Music</a>
+        <a href="contacto.html"> Contacto</a>
     </nav>
 </div>
 
 <body>
+    <a href="https://google.com" target="_blank"> PLAYER</a>
+    <!--PARA POP UP PLAYER-->
+    <!--
+        <ol>
+<li> Item 1</li>
+<li> Item 2</li>
+<li> Item 3</li>
+<li> Item 4</li>
+<li> Item 5</li>
+<li> Item 6</li>
+<li> Item 7</li>
+<li> Item 8</li>
+<li> Item 9</li>
+</ol>
+-------------------------------
+li:nth-child(3n) {
+background:
+lightskyblue;}
+-------------------------------
+li:nth-child(2n) {
+background:
+lightgreen;}
+-----------------------
+<div>
+<p> Párrafo 1 </p>
+<p> Párrafo 2 </p>
+<p> Párrafo 3 </p>
+</div>
+-----------------------
+p:nth-child(2) {
+background: cyan;
+}
+-----------------------
+    -->
     <main>
         <div class="contenedor">
             <div class="disco">
                 <img src="img/Erotica_Jorgelina_Aranda_Contratapa.jpg" width="200" height="200">
                 <div class="disco">
-                <h6>Erotica (Jorgelina Aranda) </h6>
-            </div>
+                    <h6>Erotica (Jorgelina Aranda) </h6>
+                </div>
             </div>
             <div class="disco">
                 <img src="img/Chivo_Borraro_Tapa.jpg" width="200" height="200">
                 <div class="disco">
-                <h6> El Nuevo (Chivo Borraro) </h6>
-            </div>
+                    <h6> El Nuevo (Chivo Borraro) </h6>
+                </div>
             </div>
             <div class="disco">
                 <img src="img/Black_Amaya_Quinteto_Concaran.jpg" width="200" height="200">
                 <div class="disco">
-                <h6> Concaran (Black Amaya) </h6>
-            </div>
+                    <h6> Concaran (Black Amaya) </h6>
+                </div>
             </div>
 
             <div class="disco">
                 <img src="img/Billy_Bond_Lo_mas_pesado.jpg" width="200" height="200">
                 <div class="disco">
-                <h6>Lo más pesado </h6>
-            </div>
+                    <h6>Lo más pesado </h6>
+                </div>
             </div>
             <div class="disco">
                 <img src="img/Pappos_Blues_Triangulo.jpg" width="200" height="200">
                 <div class="disco">
-                <h6> Triangulo (Pappo's Blues) </h6>
-            </div>
+                    <h6> Triangulo (Pappo's Blues) </h6>
+                </div>
             </div>
             <div class="disco">
                 <img src="img/Pastoral_Tapa.jpg" width="200" height="200">
                 <div class="disco">
-                <h6> Pastoral (Pastoral) </h6>
-            </div>
+                    <h6> Pastoral (Pastoral) </h6>
+                </div>
             </div>
         </div>
+        <footer>
+            <fieldset>
+                <h4>yo soy el footer con todos los iconos de redes sociales</h4>
+                <img src="img/instagram.png" alt"" width="40" height="40">
+                <!--
+    WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
+    DESCARGAR LA IMAGEN PNG
+    ----COMO METER ICONO DE RED SOCIAL
+    -->
+            </fieldset>
+        </footer>
     </main>
-    <footer>
-        <fieldset>
-            <img src="img/instagram.png" alt"" width="40" height="40">
-            <!--
-WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
-DESCARGAR LA IMAGEN PNG
-----COMO METER ICONO DE RED SOCIAL
--->
-        </fieldset>
-    </footer>
-
 </body>
 
 </html>
