Index revamp con grid areas

--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <header>
-Producer E87
+Producer E87 <!--ANIMATE.CSS O ANIMAR.CSS PARA SACAR UNA ANIMACION PARA PRESENTAR EL NOMBRE-->
 </header>
 <body>
     <div>
