--- a/obras.html
+++ b/obras.html
@@ -27,7 +27,7 @@
 
 <body>
     <a href="https://google.com" target="_blank"> PLAYER</a>
-    <!--PARA POP UP PLAYER-->
+    <!--PARA POP UP PLAYER usar sticky?-->
     <!--
         <ol>
 <li> Item 1</li>
@@ -62,40 +62,41 @@ background: cyan;
     -->
     <main>
         <div class="contenedor">
-            <div class="disco">
+            <div class="disco_portrait">
                 <img src="img/Erotica_Jorgelina_Aranda_Contratapa.jpg" width="200" height="200">
-                <div class="disco">
+                <div class="disco_titulo">
                     <h6>Erotica (Jorgelina Aranda) </h6>
                 </div>
             </div>
-            <div class="disco">
+            <div class="disco_portrait">
                 <img src="img/Chivo_Borraro_Tapa.jpg" width="200" height="200">
-                <div class="disco">
+                <div class="disco_titulo">
                     <h6> El Nuevo (Chivo Borraro) </h6>
                 </div>
             </div>
-            <div class="disco">
+            <div class="disco_portrait">
                 <img src="img/Black_Amaya_Quinteto_Concaran.jpg" width="200" height="200">
-                <div class="disco">
+
+                <div class="disco_titulo">
                     <h6> Concaran (Black Amaya) </h6>
                 </div>
             </div>
 
-            <div class="disco">
+            <div class="disco_portrait">
                 <img src="img/Billy_Bond_Lo_mas_pesado.jpg" width="200" height="200">
-                <div class="disco">
+                <div class="disco_titulo">
                     <h6>Lo más pesado </h6>
                 </div>
             </div>
-            <div class="disco">
+            <div class="disco_portrait">
                 <img src="img/Pappos_Blues_Triangulo.jpg" width="200" height="200">
-                <div class="disco">
+                <div class="disco_titulo">
                     <h6> Triangulo (Pappo's Blues) </h6>
                 </div>
             </div>
-            <div class="disco">
+            <div class="disco_portrait">
                 <img src="img/Pastoral_Tapa.jpg" width="200" height="200">
-                <div class="disco">
+                <div class="disco_titulo">
                     <h6> Pastoral (Pastoral) </h6>
                 </div>
             </div>
