Design Ok, Test form Post Email received or not?

--- a/index.html
+++ b/index.html
@@ -1,109 +1,57 @@
 <!DOCTYPE html>
-<html lang=“es”>
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="" X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="icon" href="img/html.ico" -->
-    <link rel="STYLESHEET" href="css/estilos.css">
-    <title>Inicio</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>Site revamp</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
 </head>
+
 <body>
     <div class="contenedor">
-        <header class="header">
-            Producer E87
-        </header>
-
+        <header class="header">Producer E87</header>
         <nav class="nav" id="nav_Menu">
             <a href="index.html"> Home</a>
             <a href="bio.html"> Bio</a>
-            <a href="obras.html"> Music</a>
+            <a href="music.html"> Music</a>
             <a href="contacto.html"> Contacto</a>
         </nav>
-
         <main class="main">
-            <div id="disco_Home">
-                <img src="img/Musicasion_Tapa.jpg" width="500" height="500">
-                <br>
+            <div>
+                <h3>TOUR DATES</h3>
+            </div>
+            <div>
+                <h6>
+                    01.May Albuquerque,NM. USA<br>
+                    07 May Orlando, FL. USA
+                </h6>
             </div>
 
-            <div id="texto_Disco_Home">
-                <p>
-                    <h3>    Musicación 4</h3>
-                   
-                <h3>Luego de casi dos décadas dedicadas a crear sonidos, Producer E87 finalmente tiene listo su primer disco.
-                    <br>
-                    El mismo cuenta con 14 temas que van desde lo mas minimal y sencillo, hasta estructurales paredes de sonido que se desmoronan frente al oyente.
-
-                </h3>
-                </p>
+        </main>
+        <div class="bloque1">Bloque 1</div>
+        <div class="sidebar">Sidebar
+            <!--
+            <div>
+                <iframe class="frame" src="player.html" name="player" width="300" title="Player" </iframe>
             </div>
-            <footer class="footer">
-                <fieldset>
-                    <img src="img/instagram.png" alt"" width="40" height="40">
-                    yo soy el footer con todos los iconos de redes sociales    
-                    <br><br><br>
-                    <!--
+-->
+        </div>
+        <footer class="footer">
+            <img src="img/instagram.png" alt"" width="40" height="40">
+            yo soy el footer con todos los iconos de redes sociales
+            <!--
             WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
             DESCARGAR LA IMAGEN PNG
             ----COMO METER ICONO DE RED SOCIAL
             -->
-                </fieldset>
-            </footer>
-
-
-        </main>
-
-        <!-- <div class="sidebar">Sidebar</div>-->
-        <!-- <div class="bloque1">Bloque1</div>-->
-       
+        </footer>
     </div>
 </body>
 
 </html>
-
-<!--
-:root {font-size: 22px; /* Tamaño base */}
-h1 {font-size: 2rem; /* El doble del tamaño base: 44px */}
-h2 {font-size: 1rem; /* El mismo tamaño base: 22px */}
-
-Las unidades flexibles (vw y vh o vmin y vmax) son relativas al tamaño del
-ancho o alto del viewport (ventana gráfica, región visible de la página Web en el
-navegador, no el body).
-● vw: viewport width. Por ejemplo, si decimos que un div debe medir 50vw, es
-equivalente al 50% del ancho total del viewport.
-● vh: viewport height. Por ejemplo, si definimos qué un div mide 50vh y el alto
-del viewport es 800px, nuestro div medirá 400px.
--->
-
-<!-- BANNER CON MENU
-<header id="header" role="banner" class="mb-3 mb-lg-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-10 offset-lg-1">
-                <nav class="nav d-flex justify-content-center justify-content-lg-end" role="navigation">
-                    <ul class="nav__menu">
-                        <li class="nav__item ">
-                            <a href="https://fabulososcadillacs.com/" class="nav__link">Home</a>
-                        </li>
-                        <li class="nav__item ">
-                            <a href="https://fabulososcadillacs.com/bio" class="nav__link">Bio</a>
-                        </li>
-                        <li class="nav__item ">
-                            <a href="https://fabulososcadillacs.com/discografia" class="nav__link">Discografía</a>
-                        </li>
-                        <li class="nav__item active">
-                            <a href="https://fabulososcadillacs.com/contacto" class="nav__link">Contacto</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
-</header>
--->
