--- a/contacto.html
+++ b/contacto.html
@@ -27,6 +27,8 @@
             <section>
                 <!--<form action="https://formspree.io/f/mvondkre" method="POST" class="formulario" id="formulario">-->
                 <form action="https://formspree.io/f/mvondkre" method="POST">
+
+                   
                     <div class="formulario__grupo" id="grupo__nombre">
                         <label for="nombre" class="formulario__label">Nombre</label>
                         <div class="formulario__grupo-input">
@@ -122,7 +124,12 @@
         -->
         </footer>
         <!--      <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>-->
+        <!--
         <script src="js/index.js"></script>
+        -->
+
+        <script src="js/main.js"></script>
+
     </div>
 </body>
 
