Todo andando. Falta Api Rest

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Site revamp</title>
+    <link rel="icon" href="img/html.ico" type="image/x-icon">
+    <title>Inicio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,16 +24,18 @@
             <a href="contacto.html"> Contacto</a>
         </nav>
         <main class="main">
-            <div>
-                <h3>TOUR DATES</h3>
+            <div id="home-tour-dates">
+  <p>              <h3>TOUR DATES</h3> </p>
             </div>
             <div>
                 <h6>
                     01.May Albuquerque,NM. USA<br>
-                    07 May Orlando, FL. USA
+                    07 May Orlando, FL. USA<br>
+                    12 May Orlando, FL. USA
                 </h6>
             </div>
-
+<br>
+<h3>COMING SOON!</h3>
         </main>
         <div class="bloque1">Bloque 1</div>
         <div class="sidebar">Sidebar
@@ -43,15 +46,35 @@
 -->
         </div>
         <footer class="footer">
-            <img src="img/instagram.png" alt"" width="40" height="40">
-            yo soy el footer con todos los iconos de redes sociales
-            <!--
-            WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
-            DESCARGAR LA IMAGEN PNG
-            ----COMO METER ICONO DE RED SOCIAL
-            -->
+            <div id="icon">
+                <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img src="img/face.png"
+                        alt="facebook" width="25" height="25"> </a>
+                <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/insta.png"
+                        alt="instagram" width="25" height="25"></a>
+                <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img src="" width="25"
+                        alt="twitter" height="25"></a>
+                <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="" alt="youtube" width="25"
+                        height="25"></a>
+            </div>
         </footer>
     </div>
+
+<!--
+    <footer class="footer">
+        <div id="icon">
+            <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img src="img/face.png"
+                    alt="facebook" width="25" height="25"> </a>
+            <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/insta.png"
+                    alt="instagram" width="25" height="25"></a>
+            <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img src="" width="25"
+                    alt="twitter" height="25"></a>
+            <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="" alt="youtube" width="25"
+                    height="25"></a>
+        </div>
+    </footer>
+-->
+
+
 </body>
 
 </html>
