--- a/javascript.html
+++ b/javascript.html
@@ -17,9 +17,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
-<header>
-    TPO
-</header>
+
+<style>
+    header {
+        font-size: 18rem;
+    }
+</style>
+<header class="header"> Producer E87 </header>
 <!--
 <div>
     <nav class="nav__btn" id="nav__btn">
@@ -36,9 +40,9 @@
 <body>
     <main>
         <section>
-            <div>
-                <p>
-                <h6>
+            <div class="tag">
+
+                
                     Funciones | Función flecha (arrow Function)
 
                     function (a){ // Función tradicional
@@ -355,8 +359,15 @@
 
                     DOM | Eventos con .addEventListener()
                     .addEventListener() es la forma más elaborada de utilizar eventos: +info
+                
+                </p>
+            </div>
+        </section>
+    </main>
+</body>
 
-                    <!--
+
+<!--
 <!DOCTYPE html>
 <html><head>
 <script>
