--- a/music.html
+++ b/music.html
@@ -5,11 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="icon" href="img/html.ico" type 
-    flaticon.com SACAR ICONOS DE AHI
-    BAJAR COMO IMAGEN PNG
-
-    -->
+  <link rel="icon" href="img/html.ico">
   <link rel="STYLESHEET" href="css/estilos.css">
   <title>Music</title>
 
@@ -28,6 +24,7 @@
       <a href="contacto.html"> Contacto</a>
     </nav>
     <main class="main">
+      <br><br>
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext"></div>
@@ -38,7 +35,7 @@
         <div class="mySlides fade">
           <div class="numbertext"></div>
           <img src="img/Pastoral_Tapa.jpg" style="width:100%">
-          <div class="text">o</div>
+          <div class="text"></div>
         </div>
 
         <div class="mySlides fade">
@@ -55,9 +52,6 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
       </div>
-
-
-
       <script src="js/music.js"></script>
 
       <!--
