Pre Media Queries

--- a/index-2.html
+++ b/index-2.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang=“es”>
+<html lang="es">
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="" X-UA-Compatible" content="IE=edge">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="icon" href="img/html.ico" type 
-    flaticon.com SACAR ICONOS DE AHI
-    BAJAR COMO IMAGEN PNG
-
-    -->
-    <link rel="STYLESHEET" href="css/estilos.css">
-    <title>Player</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="icon" href="img/html.ico" type="image/x-icon">
+    <title>Inicio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,25 +15,43 @@
 </head>
 
 <body>
-    <main class="main">
+    <div class="contenedor">
+        <header class="header">Producer E87</header>
+        <nav class="nav" id="nav_Menu">
+            <a href="index.html"> News</a>
+            <a href="bio.html"> Bio</a>
+            <a href="music.html"> Music</a>
+            <a href="contacto.html"> Contacto</a>
+        </nav>
+        <main class="main">
+            <div id="home-tour-dates">
+                <p>
+                <h3>TOUR DATES</h3>
+                </p>
+            </div>
+            <div>
+                <h6>
+                    01.May Albuquerque,NM. USA<br>
+                    07 May Orlando, FL. USA<br>
+                    12 May Orlando, FL. USA
+                </h6>
+            </div>
+            <br>
+            <p>
+            <h3>COMING SOON!</h3>
+            </p>
 
-        <div class="player_frame">
-            <div class="player_btn">
-                <button id="play">
-                    <img src="img/play-button-svgrepo-com.svg" alt="" height="25" width="25">
-                </button>
+        </main>
+        <div class="bloque1">bloque1
+            <!--
+            <div class="video1">
+                <iframe width="446" height="400" class="yt1" src="https://goo.gl/maps/53hoMXW3TgS4Hz6h7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h5>video 2 de iutu</h5>
             </div>
-            <div class="player_btn">
-                <button id="play">
-                    <img src="img/stop-button-svgrepo-com.svg" alt="" height=" 25" width="25">
-                </button>
-            </div>
-            <div class="player_btn">
-                <button id="play">
-                    <img src="img/pausa.svg" alt="" height="25" width="25">
-                </button>
-            </div>
+            -->
         </div>
+        <div class="sidebar">Sidebar</div>
+
         <footer class="footer">
             <div id="icon">
 
@@ -63,7 +77,11 @@
                 © Todos los derechos reservados por Producer E87
             </div>
         </footer>
-    </main>
+    </div>
 </body>
 
 </html>
+
+
+
+
