--- a/javascript.html
+++ b/javascript.html
@@ -11,7 +11,7 @@
 
     -->
     <link rel="STYLESHEET" href="css/estilos.css">
-    <title>TPO Consigna</title>
+    <title>javascript.hmtl</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,11 +19,16 @@
 </head>
 
 <style>
-    header {
+    .waiting_title {
         font-size: 18rem;
+        background-color: rgba(33, 16, 139, 0.5);
     }
 </style>
-<header class="header"> Producer E87 </header>
+
+<div class="waiting_title">
+    Producer E87
+</div>
+
 <!--
 <div>
     <nav class="nav__btn" id="nav__btn">
