--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
     <div class="contenedor">
         <header class="header"> Producer E87 </header>
         <nav class="nav" id="nav_Menu">
-            <a href="index.html"> Home</a>
+            <a href="index.html"> News</a>
             <a href="bio.html"> Bio</a>
             <a href="music.html"> Music</a>
             <a href="contacto.html"> Contacto</a>
@@ -79,97 +79,37 @@
                     </div>
                 </form>
             </div>
-
-            <!--
-            <section>
-                <form action="https://formspree.io/f/mvondkre" method="POST">
-
-                   
-                    <div class="formulario__grupo" id="grupo__nombre">
-                        <label for="nombre" class="formulario__label">Nombre</label>
-                        <div class="formulario__grupo-input">
-                            <input type="text" class="formulario__input" name="nombre_ingresado" id="nombre"
-                                placeholder="Ingrese su nombre">
-                            <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                        </div>
-                        <p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede
-                            contener
-                            numeros, letras y guion bajo.</p>
-                    </div>
-
-                    <div class="formulario__grupo" id="grupo__email">
-                        <label for="email" class="formulario__label">Email</label>
-                        <div class="formulario__grupo-input">
-                            <input type="email" class="formulario__input" name="email_ingresado" id="email"
-                                placeholder="correo@correo.com">
-                            <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                        </div>
-                        <p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos,
-                            guiones y
-                            guion bajo.</p>
-                    </div>
-
-                    <div class="formulario__grupo" id="grupo__asunto">
-                        <label for="asunto" class="formulario__label">Asunto</label>
-                        <div class="formulario__grupo-input">
-                            <input type="text" class="formulario__input" name="asunto_ingresado" id="asunto">
-                            <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                        </div>
-                        <p class="formulario__input-error">El asunto tiene que ser de al menos 4 dígitos y solo puede
-                            contener numeros, letras y guion bajo.</p>
-                    </div>
-
-                    <div class="formulario__grupo" id="grupo__comentario">
-                        <label for="comentario" class="formulario__label">Comentario</label>
-                        <div class="formulario__grupo-input">
-                            <textarea name="comentario_ingresado" id="comentario" cols="83  " rows="10" maxlength="300"
-                                style="resize: none"></textarea>
-                            <i class="formulario__validacion-estado fas fa-times-circle"></i>
-                        </div>
-                        <p class="formulario__input-error">El comentario tiene que ser de al menos 4 dígitos y solo
-                            puede
-                            contener numeros, letras y guion bajo.</p>
-                    </div>
-
-                    <div class="formulario__grupo" id="grupo__terminos">
-                        <label class="formulario__label">
-                            <input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
-                            Acepto los Términos y Condiciones
-                        </label>
-                        <label class="formulario__label">
-                            <input class="formulario__checkbox" type="checkbox" name="spam" id="spam">
-                            Deseo recibir Spam
-                        </label>
-                    </div>
-
-                    <div class="formulario__grupo formulario__grupo-btn-enviar">
-                        <button type="submit" class="enviar__btn">Enviar</button>
-                        <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado
-                            exitosamente!
-                        </p>
-                    </div>
-                    <div class="formulario__mensaje" id="formulario__mensaje">
-                        <p><i class="fas fa-exclamation-triangle"></i> <b>Error:</b><br> Por favor rellena el formulario
-                            correctamente. </p>
-                    </div>
-                </form>
-            </section>
-        -->
         </main>
-
+<!--
         <div class="sidebar">
             Sidebar
         </div>
         <div class="bloque1">Bloque1</div>
-
+-->
         <footer class="footer">
-            <img src="img/instagram.png" alt"" width="40" height="40">
-            yo soy el footer con todos los iconos de redes sociales
-            <!--
-        WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
-        DESCARGAR LA IMAGEN PNG
-        ----COMO METER ICONO DE RED SOCIAL
-        -->
+            <div id="icon">
+
+                <div class="icono">
+                    <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img
+                            src="img/facebook.svg" alt="facebook" width="50" height="50"> </a>
+                </div>
+                <div class="icono">
+                    <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/instagram.svg"
+                            alt="instagram" width="50" height="50"></a>
+
+                </div>
+                <div class="icono">
+                    <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img
+                            src="img/twitter.svg" width="50" alt="twitter" height="50"></a>
+                </div>
+                <div class="icono">
+                    <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="img/youtube.svg"
+                            alt="youtube" width="60" height="60"></a>
+                </div>
+            </div>
+            <div>
+                © Producer E87
+            </div>
         </footer>
         <!--      <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>-->
         <!--
