--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -18,15 +18,31 @@
     <div class="contenedor">
         <header class="header">Producer E87</header>
         <nav class="nav" id="nav_Menu">
-            <a href="index.html"> Home</a>
+            <a href="index.html"> News</a>
             <a href="bio.html"> Bio</a>
             <a href="music.html"> Music</a>
             <a href="contacto.html"> Contacto</a>
         </nav>
         <main class="main">
-            <div id="home-tour-dates">
-  <p>              <h3>TOUR DATES</h3> </p>
+
+            <div id="lastStream">
+                <p>
+                <div class="video1">
+                    <iframe class="yt1" src="https://goo.gl/maps/53hoMXW3TgS4Hz6h7" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe>
+                    <h6>08 May </h6>
+                </div>
+                </p>
             </div>
+<!--
+            <div id="home-tour-dates">
+                <p>
+                <h3>TOUR DATES</h3>
+                </p>
+            </div>
+
             <div>
                 <h6>
                     01.May Albuquerque,NM. USA<br>
@@ -34,47 +50,62 @@
                     12 May Orlando, FL. USA
                 </h6>
             </div>
-<br>
-<h3>COMING SOON!</h3>
-        </main>
-        <div class="bloque1">Bloque 1</div>
-        <div class="sidebar">Sidebar
-            <!--
-            <div>
-                <iframe class="frame" src="player.html" name="player" width="300" title="Player" </iframe>
+            -->
+            <br>
+            <p>
+            <h3>COMING SOON!</h3>
+            </p>
+ <div>
+                <h6>
+                    01 May Albuquerque, NM. <br>
+                    07 May Orlando, FL. <br>
+                    12 May New York, NY. <br>
+                    15 May Los Angeles, CA. <br>
+                    18 May Waco, TX. <br>
+                    21 May Orlando, FL. USA<br>
+
+                </h6>
             </div>
+        </main>
+        <!--
+        <div class="bloque1">bloque1
 -->
-        </div>
+        <!--
+            <div class="video1">
+                <iframe width="446" height="400" class="yt1" src="https://goo.gl/maps/53hoMXW3TgS4Hz6h7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <h5>video 2 de iutu</h5>
+            </div>
+            -->
+        <!--    </div>-->
+        <!--
+        <div class="sidebar">Sidebar</div>
+-->
         <footer class="footer">
             <div id="icon">
-                <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img src="img/face.png"
-                        alt="facebook" width="25" height="25"> </a>
-                <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/insta.png"
-                        alt="instagram" width="25" height="25"></a>
-                <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img src="" width="25"
-                        alt="twitter" height="25"></a>
-                <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="" alt="youtube" width="25"
-                        height="25"></a>
+
+                <div class="icono">
+                    <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img
+                            src="img/facebook.svg" alt="facebook" width="50" height="50"> </a>
+                </div>
+                <div class="icono">
+                    <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/instagram.svg"
+                            alt="instagram" width="50" height="50"></a>
+
+                </div>
+                <div class="icono">
+                    <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img
+                            src="img/twitter.svg" width="50" alt="twitter" height="50"></a>
+                </div>
+                <div class="icono">
+                    <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="img/youtube.svg"
+                            alt="youtube" width="60" height="60"></a>
+                </div>
+            </div>
+            <div>
+                © Producer E87
             </div>
         </footer>
     </div>
-
-<!--
-    <footer class="footer">
-        <div id="icon">
-            <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img src="img/face.png"
-                    alt="facebook" width="25" height="25"> </a>
-            <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/insta.png"
-                    alt="instagram" width="25" height="25"></a>
-            <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img src="" width="25"
-                    alt="twitter" height="25"></a>
-            <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="" alt="youtube" width="25"
-                    height="25"></a>
-        </div>
-    </footer>
--->
-
-
 </body>
 
 </html>
