--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <div class="contenedor">
         <header class="header">Producer E87</header>
+        <audio src="audio/Hip Hop 1.mp3" id="snd_header"></audio>
         <nav class="nav" id="nav_Menu">
             <a href="index.html"> News</a>
             <a href="bio.html"> Bio</a>
