--- a/music.html
+++ b/music.html
@@ -24,7 +24,11 @@
       <a href="contacto.html"> Contacto</a>
     </nav>
     <main class="main">
-      <br><br>
+      <div>
+      <audio controls id="snd_header">
+        <source src="audio/13 - Solo de bateria.mp3" type="audio/mpeg" >
+      </audio>
+    </div>
       <div class="slideshow-container">
         <div class="mySlides fade">
           <div class="numbertext"></div>
