--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -11,11 +11,6 @@
   <link rel="STYLESHEET" href="css/brazil.css">
   <link rel="icon" href="img/html.ico">
   <title>Brazil 2050</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!--
-  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-  -->
 </head>
 
 <body>
@@ -63,34 +58,49 @@
           </audio>
         </div>
       </div>
-      <div>
-        <div class="playList" id="playList">
-          escuchando a un forro (programa de radio).
+   
+      <div>5</div>
+      <div class="audio_controls" id="audio_controls5">
+        <div> <input type="file" id="ruta_archivo5"> </div>
+        <div>
+          <audio controls id="myAudio5">
+            <source src="" type="audio/mpeg" id="snd_header5">
+          </audio>
         </div>
       </div>
+
+      <div>6</div>
+      <div class="audio_controls" id="audio_controls6">
+        <div> <input type="file" id="ruta_archivo6"> </div>
+        <div>
+          <audio controls id="myAudio6">
+            <source src="" type="audio/mpeg" id="snd_header6">
+          </audio>
+        </div>
+      </div>
+
+      <div>7</div>
+      <div class="audio_controls" id="audio_controls7">
+        <div> <input type="file" id="ruta_archivo7"> </div>
+        <div>
+          <audio controls id="myAudio7">
+            <source src="" type="audio/mpeg" id="snd_header7">
+          </audio>
+        </div>
+      </div>
+
+      <div>8</div>
+      <div class="audio_controls" id="audio_controls8">
+        <div> <input type="file" id="ruta_archivo8"> </div>
+        <div>
+          <audio controls id="myAudio8">
+            <source src="" type="audio/mpeg" id="snd_header8">
+          </audio>
+        </div>
+      </div>
+   
+
     </main>
-
-    <div>5</div>
-    <div class="audio_controls" id="div5">
-
-      <div> <input type="file" id="ruta_archivo5"> </div>
-      <div>
-        <audio controls id="myAudio5">
-          <source src="" type="audio/mpeg" id="snd_header5">
-        </audio>
-      </div>
-    </div>
-
-    <div>6</div>
-    <div class="audio_controls" id="div6">
-
-      <div> <input type="file" id="ruta_archivo6"> </div>
-      <div>
-        <audio controls id="myAudio6">
-          <source src="" type="audio/mpeg" id="snd_header6">
-        </audio>
-      </div>
-    </div>
 
     <footer class="footer">
       <div id="icon">
@@ -115,6 +125,9 @@
       <div>
         <h2>
           © Producer E87
+          <br>Bedbugs(banda)
+          <br>
+          escuchando a un forro (programa de radio).
         </h2>
       </div>
     </footer>
