update de brazil 2050

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -58,7 +58,7 @@
           </audio>
         </div>
       </div>
-   
+      <!--
       <div>5</div>
       <div class="audio_controls" id="audio_controls5">
         <div> <input type="file" id="ruta_archivo5"> </div>
@@ -98,9 +98,18 @@
           </audio>
         </div>
       </div>
-   
-
+    -->
     </main>
+
+    <sidebar class="sidebar" id="sidebar derecha">
+      sidebar
+      <div class="playlist" id="playlist"> </div>
+    </sidebar>
+
+    <bloque1 class="bloque1" id="bloque1" >
+
+    </bloque1>
+
 
     <footer class="footer">
       <div id="icon">
