--- a/brazil_2050_2.0.html
+++ b/brazil_2050_2.0.html
@@ -57,9 +57,9 @@
 </div>
 
 
-<!--          <div>
+          <div>
             <button id="starts_noise" >make noise</button>
-          </div>-->
+          </div>
         </div>
 
       </div>
