Antes de muestra_array_Canciones() cree lista con div draggable desde JS

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -58,56 +58,30 @@
           </audio>
         </div>
       </div>
-      <!--
-      <div>5</div>
-      <div class="audio_controls" id="audio_controls5">
-        <div> <input type="file" id="ruta_archivo5"> </div>
-        <div>
-          <audio controls id="myAudio5">
-            <source src="" type="audio/mpeg" id="snd_header5">
-          </audio>
-        </div>
-      </div>
 
-      <div>6</div>
-      <div class="audio_controls" id="audio_controls6">
-        <div> <input type="file" id="ruta_archivo6"> </div>
-        <div>
-          <audio controls id="myAudio6">
-            <source src="" type="audio/mpeg" id="snd_header6">
-          </audio>
-        </div>
-      </div>
-
-      <div>7</div>
-      <div class="audio_controls" id="audio_controls7">
-        <div> <input type="file" id="ruta_archivo7"> </div>
-        <div>
-          <audio controls id="myAudio7">
-            <source src="" type="audio/mpeg" id="snd_header7">
-          </audio>
-        </div>
-      </div>
-
-      <div>8</div>
-      <div class="audio_controls" id="audio_controls8">
-        <div> <input type="file" id="ruta_archivo8"> </div>
-        <div>
-          <audio controls id="myAudio8">
-            <source src="" type="audio/mpeg" id="snd_header8">
-          </audio>
-        </div>
-      </div>
-    -->
     </main>
 
     <sidebar class="sidebar" id="sidebar derecha">
-      sidebar
+      sidebar derecha
       <div class="playlist" id="playlist"> </div>
     </sidebar>
 
     <bloque1 class="bloque1" id="bloque1" >
+      <div class="playlist" id="playlistfrescos"> 
 
+<ul>
+<li class="li" > <div id="track_1_nombre" ></div></li>
+<li class="li"><div id="track_2_nombre" ></div> </li>
+<li class="li"><div id="track_3_nombre" ></div> </li>
+<li class="li"><div id="track_4_nombre" ></div> </li>
+</ul>
+
+
+
+
+
+
+      </div>
     </bloque1>
 
 
