falta recuperar data de div obj dragged

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -19,6 +19,11 @@
     </header>
 
     <main class="main">
+
+      <section class="deposito" id="deposito_1">
+        <p>Drop audio here</p>
+        </section>
+
       <div>1</div>
       <div class="audio_controls" id="audio_controls">
         <div> <input type="file" id="ruta_archivo"> </div>
@@ -68,14 +73,14 @@
 
     <bloque1 class="bloque1" id="bloque1" >
       <div class="playlist" id="playlistfrescos"> 
-
+<!--
 <ul>
 <li class="li" > <div id="track_1_nombre" ></div></li>
 <li class="li"><div id="track_2_nombre" ></div> </li>
 <li class="li"><div id="track_3_nombre" ></div> </li>
 <li class="li"><div id="track_4_nombre" ></div> </li>
 </ul>
-
+-->
 
 
 
