fai to recognize obj Cancion when dropped[3~

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -22,13 +22,12 @@
 
       <section class="deposito" id="deposito_1">
         <p>Drop audio here</p>
-        </section>
+      </section>
 
       <div>1</div>
       <div class="audio_controls" id="audio_controls">
         <div> <input type="file" id="ruta_archivo"> </div>
-        <div>
-          <audio controls id="myAudio">
+        <div> <audio controls id="myAudio">
             <source src="" type="audio/mpeg" id="snd_header">
           </audio>
         </div>
@@ -71,22 +70,8 @@
       <div class="playlist" id="playlist"> </div>
     </sidebar>
 
-    <bloque1 class="bloque1" id="bloque1" >
-      <div class="playlist" id="playlistfrescos"> 
-<!--
-<ul>
-<li class="li" > <div id="track_1_nombre" ></div></li>
-<li class="li"><div id="track_2_nombre" ></div> </li>
-<li class="li"><div id="track_3_nombre" ></div> </li>
-<li class="li"><div id="track_4_nombre" ></div> </li>
-</ul>
--->
-
-
-
-
-
-      </div>
+    <bloque1 class="bloque1" id="bloque1">
+      <div class="playlist" id="playlistfrescos"> </div>
     </bloque1>
 
 
