Test si esta funcional

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -10,6 +10,11 @@
   -->
   <link rel="STYLESHEET" href="css/brazil.css">
   <link rel="icon" href="img/html.ico">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+
   <title>Brazil 2050</title>
 </head>
 
@@ -19,11 +24,7 @@
     </header>
 
     <main class="main">
-
-      <section class="deposito" id="deposito_1">
-        <p>Drop audio here</p>
-      </section>
-
+      <div class="deposito" id="deposito_1">  </div>
       <div>1</div>
       <div class="audio_controls" id="audio_controls">
         <div> <input type="file" id="ruta_archivo"> </div>
@@ -72,6 +73,7 @@
 
     <bloque1 class="bloque1" id="bloque1">
       <div class="playlist" id="playlistfrescos"> </div>
+      <div class="tiraloaca" id="appendicitis"></div>
     </bloque1>
 
 
