--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -24,19 +24,30 @@
     </header>
 
     <main class="main">
-      <div class="deposito" id="deposito_1">  </div>
-      <div>1</div>
+
+      <div>1 FALTA PROGRESS BAR + CURRENT TIME</div>
       <div class="audio_controls" id="audio_controls">
-        <div> <input type="file" id="ruta_archivo"> </div>
-        <div> <audio controls id="myAudio">
-            <source src="" type="audio/mpeg" id="snd_header">
-          </audio>
+        <div class="deposito" id="deposito_1"> </div>
+        <label for="player_1_label" id="player_1_label"></label>
+       <audio id="myAudio"> <source src="" type="audio/mpeg" id="snd_header"> </audio> 
+        <div>
+          <button id="starts_btn_1" onclick="controls_1_play()">PLAY</button>
+          <button id="stops_btn_1" onclick="controls_1_stop()">STOP</button>
+          <button id="pause_btn_1" onclick="controls_1_pause()">PAUSE</button>
+          <button id="loop_btn_1" onclick="controls_1_loop()">LOOP</button>
+          <span>Volume </span>
+          <input type='range' min=0 max=1 step='0.01' value=0 id='volume_1' onclick="controls_1_volume()">
+          <span>playRate </span>
+          <input type='range' min=0 max=1 step='0.01' value=0 id='playRate_1' >
         </div>
+        <div> <input type="file" id="ruta_archivo"> </div>
       </div>
 
       <div>2</div>
       <div class="audio_controls" id="audio_controls2">
+
         <div> <input type="file" id="ruta_archivo2"> </div>
+
         <div>
           <audio controls id="myAudio2">
             <source src="" type="audio/mpeg" id="snd_header2">
