--- a/brazil_2050 3.0.html
+++ b/brazil_2050 3.0.html
@@ -28,8 +28,10 @@
       <div>1 FALTA PROGRESS BAR + CURRENT TIME</div>
       <div class="audio_controls" id="audio_controls">
         <div class="deposito" id="deposito_1"> </div>
-        <label for="player_1_label" id="player_1_label"></label>
-       <audio id="myAudio"> <source src="" type="audio/mpeg" id="snd_header"> </audio> 
+        <p id="player_1_label"></p>
+        <audio id="myAudio">
+          <source src="" type="audio/mpeg" id="snd_header">
+        </audio>
         <div>
           <button id="starts_btn_1" onclick="controls_1_play()">PLAY</button>
           <button id="stops_btn_1" onclick="controls_1_stop()">STOP</button>
@@ -37,34 +39,48 @@
           <input class="checkbox" type="checkbox" name="loop_checkbox" id="loop_checkbox">
           <button id="loop_btn_1" onclick="controls_1_loop()">LOOP</button>
           <input class="checkbox" type="checkbox" name="autoplay_checkbox" id="autoplay_checkbox">AUTOPLAY
-          <label for="volume_1_text" id="volume_1_text"></label>
-          <label for="volume_1_value" id="volume_1_value"></label>
-          <input type='range' min=0 max=1 step='0.01' value=0 id='volume_1' onclick="controls_1_volume()">
+          <p id="volume_1_text"></p>
+          <p id="volume_1_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=0.1 id='volume_1' onclick="controls_1_volume()">
           <br>
-          <label for="play_Rate_1_text" id="play_Rate_1_text"></label>
-          <label for="play_Rate_1_value" id="play_Rate_1_value"></label>
-          <input type='range' min=0 max=1 step='0.01' value=0 id='playRate_1' >
+          <p id="play_Rate_1_text"></p>
+          <p id="play_Rate_1_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_1'>
         </div>
+        <!--si saco este input desaparece la lista del array_Canciones a la izquierda-->
         <div> <input type="file" id="ruta_archivo"> </div>
       </div>
 
       <div>2</div>
       <div class="audio_controls" id="audio_controls2">
-
-        <div> <input type="file" id="ruta_archivo2"> </div>
-
+        <div class="deposito" id="deposito_2"> </div>
+        <p id="player_2_label"></p>
+        <audio id="myAudio2">
+          <source src="" type="audio/mpeg" id="snd_header">
+        </audio>
         <div>
-          <audio controls id="myAudio2">
-            <source src="" type="audio/mpeg" id="snd_header2">
-          </audio>
+          <button id="starts_btn_2" onclick="controls_2_play()">PLAY</button>
+          <button id="stops_btn_2" onclick="controls_2_stop()">STOP</button>
+          <button id="pause_btn_2" onclick="controls_2_pause()">PAUSE</button>
+          <input class="checkbox" type="checkbox" name="loop_checkbox2" id="loop_checkbox2">
+          <button id="loop_btn_2" onclick="controls_2_loop()">LOOP</button>
+          <input class="checkbox" type="checkbox" name="autoplay_checkbox2" id="autoplay_checkbox2">AUTOPLAY
+          <p id="volume_2_text"></p>
+          <p id="volume_2_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=0.1 id='volume_2' onclick="controls_2_volume()">
+          <br>
+          <p id="play_Rate_2_text"></p>
+          <p id="play_Rate_2_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_2'>
         </div>
+        <div> <input type="file" id="ruta_archivo2"> </div>
       </div>
 
       <div>3</div>
       <div class="audio_controls" id="audio_controls3">
         <div> <input type="file" id="ruta_archivo3"> </div>
         <div>
-          <audio controls id="myAudio3">
+          <audio id="myAudio3">
             <source src="" type="audio/mpeg" id="snd_header3">
           </audio>
         </div>
@@ -73,11 +89,6 @@
       <div>4</div>
       <div class="audio_controls" id="audio_controls4">
         <div> <input type="file" id="ruta_archivo4"> </div>
-        <div>
-          <audio controls id="myAudio4">
-            <source src="" type="audio/mpeg" id="snd_header4">
-          </audio>
-        </div>
       </div>
 
     </main>
@@ -114,12 +125,12 @@
         </div>
       </div>
       <div>
-       
-          © Producer E87
-          <br>Bedbugs(banda)
-          <br>
-          escuchando a un forro (programa de radio).
-        
+
+        © Producer E87
+        <br>Bedbugs(banda)
+        <br>
+        escuchando a un forro (programa de radio).
+
       </div>
     </footer>
   </div>
