--- a/brazil_2050_2.0.html
+++ b/brazil_2050_2.0.html
@@ -19,12 +19,10 @@
     </header>
 
     <main class="main">
-
       <div>
         <div>
           escuchando a un forro (programa de radio).
           <br>
-          
           Bedbugs(banda)
           <br>
         </div>
@@ -44,55 +42,16 @@
             <br>
             <span>Volume </span>
             <input type='range' min=0 max=1 step='0.01' value=0 id='volume_8' onclick="control_8_volume()">
-             <span>playRate </span>
+            <span>playRate </span>
             <input type='range' min=0 max=1 step='0.01' value=0 id='playRate_8' onclick="control_8_playRate()">
-          </div>
-<br>
-<div>
-<!--
-  <section id="cajacanvas">
-    <canvas id="canvas" width="500" height="300"></canvas>
-    </section>
-    -->
-</div>
-
-
-          <div>
-            <button id="starts_noise" >make noise</button>
+            <span>Current position </span>
+            <input type='range' min=0 max=1 step='0.01' value=0 id='current_8' onclick="control_8_current()">
           </div>
         </div>
-
       </div>
-
   </div>
   </main>
 
-  <footer class="footer">
-    <div id="icon">
-      <div class="icono" id="face_icon">
-        <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img src="img/facebook.svg"
-            alt="facebook"> </a>
-      </div>
-      <div class="icono" id="insta_icon">
-        <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/instagram.svg"
-            alt="instagram"></a>
-
-      </div>
-      <div class="icono" id="twitter_icon">
-        <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img src="img/twitter.svg"
-            alt="twitter"></a>
-      </div>
-      <div class="icono" id="youtube_icon">
-        <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="img/youtube.svg"
-            alt="youtube"></a>
-      </div>
-    </div>
-    <div>
-      <h2>
-        © Producer E87
-      </h2>
-    </div>
-  </footer>
   </div>
   <script src="js/brazil_2050_2.0.js"></script>
   <!--
