--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <audio src="audio/Hip Hop 1.mp3" id="snd_header"></audio>
         <nav class="nav" id="nav_Menu">
             <a href="index.html"> News</a>
-            <a href="brazil_2050.html"> Toyz</a>
+            <a href="brazil_2050 3.0.html"> Toyz</a>
             <a href="bio.html"> Bio</a>
             <a href="music.html"> Music</a>
             <a href="contacto.html"> Contacto</a>
