--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="" X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-  -->
   <link rel="STYLESHEET" href="css/brazil.css">
   <link rel="icon" href="img/html.ico">
 
@@ -25,54 +23,123 @@
 
     <main class="main">
 
+      <p id="teclaApretada"></p>
+
       <div>1 FALTA PROGRESS BAR + CURRENT TIME</div>
       <div class="audio_controls" id="audio_controls">
         <div class="deposito" id="deposito_1"> </div>
-        <label for="player_1_label" id="player_1_label"></label>
-       <audio id="myAudio"> <source src="" type="audio/mpeg" id="snd_header"> </audio> 
+        <p id="player_1_label"></p>
+        <audio id="myAudio">
+          <source src="" type="audio/mpeg" id="snd_header">
+        </audio>
         <div>
           <button id="starts_btn_1" onclick="controls_1_play()">PLAY</button>
           <button id="stops_btn_1" onclick="controls_1_stop()">STOP</button>
           <button id="pause_btn_1" onclick="controls_1_pause()">PAUSE</button>
+          <input class="checkbox" type="checkbox" name="loop_checkbox" id="loop_checkbox">
           <button id="loop_btn_1" onclick="controls_1_loop()">LOOP</button>
-          <span>Volume </span>
-          <input type='range' min=0 max=1 step='0.01' value=0 id='volume_1' onclick="controls_1_volume()">
-          <span>playRate </span>
-          <input type='range' min=0 max=1 step='0.01' value=0 id='playRate_1' >
+          <input class="checkbox" type="checkbox" name="autoplay_checkbox" id="autoplay_checkbox">AUTOPLAY
+          <p id="volume_1_text"></p>
+          <p id="volume_1_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_1' onclick="controls_1_volume()">
+          <br>
+          <p id="play_Rate_1_text"></p>
+          <p id="play_Rate_1_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_1'>
+          <p id="currentPosition">Current position </p>
+          <input type='range' min=0 max=1 step='0.01' value=0 id='current_8' onclick="control_8_current()">
+          <p id="duracion_1_text"></p>
+          <p id="duracion_1_value"></p>
         </div>
+        <!--si saco este input desaparece la lista del array_Canciones a la izquierda-->
         <div> <input type="file" id="ruta_archivo"> </div>
       </div>
 
       <div>2</div>
       <div class="audio_controls" id="audio_controls2">
-
-        <div> <input type="file" id="ruta_archivo2"> </div>
-
+        <div class="deposito" id="deposito_2"> </div>
+        <p id="player_2_label"></p>
+        <audio id="myAudio2">
+          <source src="" type="audio/mpeg" id="snd_header">
+        </audio>
         <div>
-          <audio controls id="myAudio2">
-            <source src="" type="audio/mpeg" id="snd_header2">
-          </audio>
+          <button id="starts_btn_2" onclick="controls_2_play()">PLAY</button>
+          <button id="stops_btn_2" onclick="controls_2_stop()">STOP</button>
+          <button id="pause_btn_2" onclick="controls_2_pause()">PAUSE</button>
+          <input class="checkbox" type="checkbox" name="loop_checkbox2" id="loop_checkbox2">
+          <button id="loop_btn_2" onclick="controls_2_loop()">LOOP</button>
+          <input class="checkbox" type="checkbox" name="autoplay_checkbox2" id="autoplay_checkbox2">AUTOPLAY
+          <p id="volume_2_text"></p>
+          <p id="volume_2_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_2' onclick="controls_2_volume()">
+          <br>
+          <p id="play_Rate_2_text"></p>
+          <p id="play_Rate_2_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_2'>
         </div>
+        <p id="currentPosition">Current position </p>
+        <input type='range' min=0 max=1 step='0.01' value=0 id='current_8' onclick="control_8_current()">
+        <p id="duracion_2_text"></p>
+        <p id="duracion_2_value"></p>
+        <div> <input type="file" id="ruta_archivo2"> </div>
       </div>
 
       <div>3</div>
-      <div class="audio_controls" id="audio_controls3">
-        <div> <input type="file" id="ruta_archivo3"> </div>
+      <div class="audio_controls" id="audio_controls2">
+        <div class="deposito" id="deposito_3"> </div>
+        <p id="player_3_label"></p>
+        <audio id="myAudio3">
+          <source src="" type="audio/mpeg" id="snd_header">
+        </audio>
         <div>
-          <audio controls id="myAudio3">
-            <source src="" type="audio/mpeg" id="snd_header3">
-          </audio>
+          <button id="starts_btn_3" onclick="controls_3_play()">PLAY</button>
+          <button id="stops_btn_3" onclick="controls_3_stop()">STOP</button>
+          <button id="pause_btn_3" onclick="controls_3_pause()">PAUSE</button>
+          <input class="checkbox" type="checkbox" name="loop_checkbox3" id="loop_checkbox3">
+          <button id="loop_btn_3" onclick="controls_3_loop()">LOOP</button>
+          <input class="checkbox" type="checkbox" name="autoplay_checkbox3" id="autoplay_checkbox3">AUTOPLAY
+          <p id="volume_3_text"></p>
+          <p id="volume_3_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_3' onclick="controls_3_volume()">
+          <br>
+          <p id="play_Rate_3_text"></p>
+          <p id="play_Rate_3_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_3'>
+          <p id="currentPosition">Current position </p>
+          <input type='range' min=0 max=1 step='0.01' value=0 id='current_8' onclick="control_8_current()">
+          <p id="duracion_3_text"></p>
+          <p id="duracion_3_value"></p>
         </div>
+        <div> <input type="file" id="ruta_archivo3"> </div>
       </div>
 
       <div>4</div>
       <div class="audio_controls" id="audio_controls4">
-        <div> <input type="file" id="ruta_archivo4"> </div>
+        <div class="deposito" id="deposito_4"> </div>
+        <p id="player_4_label"></p>
+        <audio id="myAudio4">
+          <source src="" type="audio/mpeg" id="snd_header">
+        </audio>
         <div>
-          <audio controls id="myAudio4">
-            <source src="" type="audio/mpeg" id="snd_header4">
-          </audio>
+          <button id="starts_btn_4" onclick="controls_4_play()">PLAY</button>
+          <button id="stops_btn_4" onclick="controls_4_stop()">STOP</button>
+          <button id="pause_btn_4" onclick="controls_4_pause()">PAUSE</button>
+          <input class="checkbox" type="checkbox" name="loop_checkbox4" id="loop_checkbox4">
+          <button id="loop_btn_4" onclick="controls_4_loop()">LOOP</button>
+          <input class="checkbox" type="checkbox" name="autoplay_checkbox4" id="autoplay_checkbox4">AUTOPLAY
+          <p id="volume_4_text"></p>
+          <p id="volume_4_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='volume_4' onclick="controls_4_volume()">
+          <br>
+          <p id="play_Rate_4_text"></p>
+          <p id="play_Rate_4_value"></p>
+          <input type='range' min=0 max=1 step='0.01' value=1 id='playRate_4'>
+          <p id="currentPosition">Current position </p>
+          <input type='range' min=0 max=1 step='0.01' value=0 id='current_8' onclick="control_8_current()">
+          <p id="duracion_4_text"></p>
+          <p id="duracion_4_value"></p>
         </div>
+        <div> <input type="file" id="ruta_archivo4"> </div>
       </div>
 
     </main>
@@ -109,12 +176,12 @@
         </div>
       </div>
       <div>
-        <h2>
-          © Producer E87
-          <br>Bedbugs(banda)
-          <br>
-          escuchando a un forro (programa de radio).
-        </h2>
+
+        © Producer E87
+        <br>Bedbugs(banda)
+        <br>
+        escuchando a un forro (programa de radio).
+
       </div>
     </footer>
   </div>
