volume controlado x key + volume_value in real time

--- a/brazil_2050.html
+++ b/brazil_2050.html
@@ -24,6 +24,8 @@
     <header class="header" id="header"> Producer E87
     </header>
     <main class="main">
+      <input class="checkbox" type="checkbox" name="local_checkbox" id="local_checkbox">
+      Local
       <p id="teclaApretada"></p>
       <div>1 FALTA PROGRESS BAR + CURRENT TIME</div>
       <div class="audio_controls" id="audio_controls">
